--- a/short-stories.html
+++ b/short-stories.html
@@ -45,6 +45,14 @@
     <button id="clearFilters">Clear</button>
   </section>
 
+  <!-- Table of contents -->
+  <section class="toc">
+    <h2>Table of Contents</h2>
+    <ul id="toc-list">
+    <!-- JS will fill this -->
+    </ul>
+  </section>
+
   <!-- Short stories list -->
   <section class="shortstory-list">
   <!-- Add more poems here as <article> -->
