--- a/poems.html
+++ b/poems.html
@@ -145,6 +145,28 @@ About being different and finding companionship in beauty. Was among the firsts 
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-1')">Copy Link</button>
     </article>
 
+    <article id="poem-2009-2" class="poem-item" data-year="2009" data-lang="it">
+      <h3>Eos, nume del mattino</h3>
+      <p class="meta">2009 • Italian</p>
+      <pre>
+Eos, nume del mattino! Con le tue dita rosee
+Getti qua e là petali di rododendri e boccioli di glicine,
+Rischiari col tuo dorato mantello
+Il cielo di un chiarore tenue, di pastello
+
+Sorgi, Elios Aghatos!
+brulica la linea tra mare e cielo di mille fiammelle,
+Strisciano i tuoi raggi come serpenti sui contorni dei corpi,
+riveste la tua luce con un aureo velo i nembi del mattino,
+Alza il tuo carro oltre l’orizzonte marino,
+E divora con il tuo ardore gli occhi che ti sfidano!
+      </pre>
+      <!--<h4>Genesis</h4>
+      <p class="meta">
+About being different and finding companionship in beauty. Was among the firsts in a literary competition in Italy. </p>-->
+    <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-2')">Copy Link</button>
+    </article>
+
 
   </section>
 </main>
