--- a/poems.html
+++ b/poems.html
@@ -141,7 +141,7 @@ E hai visto mille mosche bianche.
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
-About being different and finding companionship in beauty. Was among the firsts in a literary competition in Italy. </p>
+About being different and finding companionship in beauty. This composition was among the firsts in a literary competition in Italy (Parole in libertà, 2009). </p>
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-1')">Copy Link</button>
     </article>
 
@@ -163,7 +163,7 @@ E divora con il tuo ardore gli occhi che ti sfidano!
       </pre>
       <!--<h4>Genesis</h4>
       <p class="meta">
-About being different and finding companionship in beauty. Was among the firsts in a literary competition in Italy. </p>-->
+To Eos, the goddess of dawn, and to Helios, the god of Sun.</p>-->
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-2')">Copy Link</button>
     </article>
 
