--- a/poems.html
+++ b/poems.html
@@ -161,7 +161,7 @@ riveste la tua luce con un aureo velo i nembi del mattino,
 Alza il tuo carro oltre l’orizzonte marino,
 E divora con il tuo ardore gli occhi che ti sfidano!
       </pre>
-      <!--<h4>Genesis</h4>
+      <h4>Genesis</h4>
       <p class="meta">
 To Eos, the goddess of dawn, and to Helios, the god of Sun.</p>-->
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-2')">Copy Link</button>
