--- a/poems.html
+++ b/poems.html
@@ -163,7 +163,7 @@ E divora con il tuo ardore gli occhi che ti sfidano!
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
-To Eos, the goddess of dawn, and to Helios, the god of Sun.</p>-->
+To Eos, the goddess of dawn, and to Helios, the god of Sun.</p>
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-2')">Copy Link</button>
     </article>
 
