--- a/poems.html
+++ b/poems.html
@@ -150,16 +150,15 @@ About being different and finding companionship in beauty. This composition was 
       <p class="meta">2009 • Italian</p>
       <pre>
 Eos, nume del mattino! Con le tue dita rosee
-Getti qua e là petali di rododendri e boccioli di glicine,
-Rischiari col tuo dorato mantello
-Il cielo di un chiarore tenue, di pastello
-
-Sorgi, Elios Aghatos!
-brulica la linea tra mare e cielo di mille fiammelle,
-Strisciano i tuoi raggi come serpenti sui contorni dei corpi,
-riveste la tua luce con un aureo velo i nembi del mattino,
-Alza il tuo carro oltre l’orizzonte marino,
-E divora con il tuo ardore gli occhi che ti sfidano!
+dissemini sul firmamento
+boccioli di glicine
+e petali di rododendro.
+Ali di cigno sui tuoi lombi delicati
+t’innalzano dai flutti di Oceano.
+Avvolta nel tuo dorato mantello,
+intrecciato d’infiorescenze zafferano,
+rischiari Il cielo, annunciando
+il carro infuocato di Elios, tuo fratello.
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
