--- a/poems.html
+++ b/poems.html
@@ -162,7 +162,7 @@ il carro infuocato di Elios, tuo fratello.
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
-To Eos, the goddess of dawn, and to Helios, the god of Sun.</p>
+To Eos, the goddess of dawn. </p>
     <button onclick="navigator.clipboard.writeText(window.location.href.split('#')[0] + '#poem-2009-2')">Copy Link</button>
     </article>
 
