--- a/poems.html
+++ b/poems.html
@@ -58,8 +58,7 @@
     
     <article class="poem-item" data-year="2015" data-lang="it">
       <h3 id="poem-2012-1">Contrasts</h3>
-      <p class="meta">23rd November 2012 • English <br>
-      To Janosch </p>
+      <p class="meta">23rd November 2012 • English
       <pre>
 You call it divine, I call it chance,
 when the words of my mind blend into poetry.
