--- a/poems.html
+++ b/poems.html
@@ -99,26 +99,26 @@ in our hunger for what we seek.
       <p class="meta">14th January 2015 • Italian <br>
       To Janosch </p>
       <pre>
-La tua figura si staglia sul cielo
-A volte maestosa e tagliente,
-A volte coperta in un bianco velo
-Timida e scaltra sussurri silente
-"Avanti! Vieni, vieni a conquistarmi!
-Vieni! Io ti aspetto! Non dimenticarmi!"
-        
-Da quel dì l’animo si fa irrequieto
-Conquistarti è svelare un segreto
-Rupi rocce guglie e speroni
-Gole, dirupi e valloni,
-Grigia, fredda e grinzosa
-Brulla, grezza e spaventosa.
-        
+La tua figura si staglia sul cielo,
+a volte maestosa e tagliente,
+a volte coperta in un bianco velo.
+Timida e scaltra, sussurri silente:
+«Avanti! Vieni, vieni a conquistarmi!
+Vieni! Io ti aspetto! Non dimenticarmi!» 
+
+Da quel dì l’animo si fa irrequieto:
+conquistarti è svelare un segreto.
+Rupi, rocce, guglie e speroni,
+gole, dirupi e valloni,
+grigia, fredda e grinzosa,
+brulla, grezza e spaventosa. 
+
 Perché ogni montagna è tale:
-Quanto più si va su, meno fa male.
-Quassù si vive solo di aria e sogni:
-Sfumano angosce e svaniscon bisogni
-Ed è quasi un delirio di pace
-Che stretto stringe il nostro torace.
+quanto più si va su, meno fa male.
+Quassù si vive solo d’aria e sogni:
+sfumano angosce e svaniscon i bisogni,
+ed è quasi un delirio di pace
+che stretto stringe il nostro torace. 
 
 Ma a volte si fa crudele il fato.
 Quante anime hai già reclamato?
