--- a/poems.html
+++ b/poems.html
@@ -164,18 +164,18 @@ Because otherwise, the gates would disappear.</p>
       <h3>Mosca Bianca</h3>
       <p class="meta">2009 • Italian</p>
       <pre>
-Oh Mosca bianca, tanto sprezzata per la tua diversità!
+Oh, Mosca bianca, tanto sprezzata per la tua diversità!
 Non sanno vedere
-Le tue compagne nere
-Il valore della tua originalità
-Guarda!  La tua tintura alabastrina 
-Ti eguaglia alle margherite del prato. 
-Attraversando tempeste di semi di tarassaco
-Vibra l’ala tua cristallina,
-Roteano le caliptra ronzanti.
-Finché una notte, trascinata troppo lontana dal vento
-Hai alzato  lo sguardo al firmamento
-E hai visto mille mosche bianche.
+le tue compagne nere
+il valore della tua originalità.
+Guarda! La tua tintura alabastrina
+ti eguaglia alle margherite del prato.
+Attraversando tempeste di semi di tarassaco,
+vibra l’ala tua cristallina,
+roteano le caliptre ronzanti.
+Finché una notte, trascinata troppo lontana dal vento,
+hai alzato lo sguardo al firmamento
+e hai visto mille mosche bianche.
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
