--- a/poems.html
+++ b/poems.html
@@ -133,22 +133,22 @@ Quante anime hai già reclamato?
       <h3>Der Mond schien helle</h3>
       <p class="meta">August 2011 • German</p>
       <pre>
-Der Mond schien helle
+Der Mond schien helle,
 schrieb einen Weg in die Welle,
-so leicht wie ein seid‘nes Gewand.
+so leicht wie ein seidenes Band.
 So nahm ich deine Hand:
 Komm, lass uns gehen
--keiner darf uns sehen-
-zu den Pforten des Mondes
+– keiner darf uns sehen –
+zu den Pforten des Mondes,
 denn dort verbirgt sich eine Welt
--komm, und schau selbst-
+– komm und schau selbst –
 eine Welt voller Magie
--für dich erschuf ich sie-
-eine Welt ohne Zwietracht
+– für dich erschuf ich sie –
+eine Welt ohne Zwietracht,
 wo deine Seele erwacht.
-Segeln wir uebers licht
--und sieht man uns nicht-
-zu den Pforten des Mondes…
+Segeln wir übers Licht
+– und sieht man uns nicht –
+zu den Pforten des Mondes.
       </pre>
       <h4>Genesis</h4>
       <p class="meta">
