--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <h1>Lara Mac Veeameroi</h1>
   <nav class="navbar">
     <a href="index.html">Home</a>
-    <a href="poems.html">Poems</a>
-    <a href="short-stories.html">Short Stories</a>
+   <!-- <a href="poems.html">Poems</a>
+    <a href="short-stories.html">Short Stories</a>  -->
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
@@ -26,7 +26,7 @@
     <p>Welcome to the official website of Lara Mac Veeameroi — poet, writer, and thinker.</p>
   </section>
 
-  <section class="latest-poems">
+<!--  <section class="latest-poems">
     <h2>Latest Poems</h2>
     <ul id="latest-poems-list">
       <li>Loading latest poems…</li>
@@ -38,7 +38,7 @@
     <ul id="latest-shortstories-list">
       <li>Loading latest short story…</li>
     </ul>
-  </section>
+  </section>  -->
 </main>
 
 <!-- Footer -->
