--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     <p>Welcome to the official website of Lara Mac Veeameroi — poet, writer, and thinker.</p>
   </section>
 
+  <section class="intro">
+    <h2>About the author</h2>
+    <p>
+      Lara Mac Veeameroi is a non-professional poet and author of short stories born in the late 80's. She has written since childhood, moving fluidly between three different languages. 
+      A keen supporter of nature rights and human rights, she identifies as sapphic. Her work explores her struggles with depression, the feeling of loneliness, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope.
+      An outdoors lover, she often draws imagery from the natural world to shape her poetry and stories.
+    </p>
+  </section>
+
+  
+
 <!--  <section class="latest-poems">
     <h2>Latest Poems</h2>
     <ul id="latest-poems-list">
