--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <header class="site-header">
   <h1>Lara Mac Veeameroi</h1>
   <nav class="navbar">
-    <a href="index.html">Home</a>
-   <!-- <a href="poems.html">Poems</a>
-    <a href="short-stories.html">Short Stories</a>  -->
+    <!--<a href="index.html">Home</a>
+    <a href="poems.html">Poems</a>
+    <a href="short-stories.html">Short Stories</a>  
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> -->
   </nav>
 </header>
 
@@ -29,13 +29,18 @@
   <section class="intro">
     <h2>About the author</h2>
     <p>
-      Lara Mac Veeameroi is a non-professional poet and author of short stories born in the late 80's. She has written since childhood, moving fluidly between three different languages. 
-      A keen supporter of nature rights and human rights, she identifies as sapphic. Her work explores her struggles with depression, the feeling of loneliness, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope.
-      An outdoors lover, she often draws imagery from the natural world to shape her poetry and stories.
+      Lara Mac Veeameroi is a poet and author of short stories born in the late 80's. She has written since childhood, moving fluidly between three different languages – Italian, English and German.
+      Her work explores a variety of themes, from her struggles with depression, the feeling of loneliness, the effort to find herself beneath layers of cultural conditioning and painful experiences, and her relentless pursuit of hope.
+      An outdoors lover, she often draws imagery from the natural world to shape her poetry and stories. A keen supporter of nature and human rights, she identifies as sapphic.
     </p>
   </section>
 
-  
+  <section class="intro">
+  <h2>Contact the author</h2>
+    <p>To contact Lara Mac Veeameroi, use one of the contact details listed below. Offensive messages will be reported.</p>
+    <p>Email: <a href="mailto:lmv.author@proton.me">lmv.author@proton.me</a></p>
+    <p>Instagram: <a href="https://instagram.com/lmv.author" target="_blank">@lmv.author</a></p>
+  </section>
 
 <!--  <section class="latest-poems">
     <h2>Latest Poems</h2>
